<resources>
    <string name="app_name">muvi</string>
    <string name="title_home">Home</string>
    <string name="title_genres">Genres</string>
    <string name="title_upcoming">UpComing</string>
    <string name="title_search">Search</string>
    <string name="title_setting">Setting</string>
    <string name="title_all_genres">All genres</string>
    <string name="title_discovery">Discovery</string>
    <string name="title_trending">Trending</string>
    <string name="title_top_rate">Top Rate</string>
    <string name="title_popular">Popular</string>
    <string name="title_recommend">Recommend</string>

    <string name="default_error">Error…!</string>

    <string name="text_information">Info</string>
    <string name="text_my_list">My List</string>
    <string name="text_search_input">Search for movie, genres, people</string>
    <string name="text_play_trailer">Play Trailer</string>
    <string name="text_more_like_this">MORE LIKE THIS</string>
</resources>
