<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/menuGenres"
        android:icon="@drawable/ic_genres"
        android:title="@string/title_genres" />

    <item
        android:id="@+id/menuUpComing"
        android:icon="@drawable/ic_upcominng"
        android:title="@string/title_upcoming" />

    <item
        android:id="@+id/menuSearch"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/menuSetting"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_setting" />
</menu>
