<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageDetail"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_216"
                    android:contentDescription="@null"
                    android:scaleType="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:alpha="0.95"
                    android:background="@color/color_dove_gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textStar"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textStar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:drawableEndCompat="@drawable/ic_baseline_star_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textStar" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:elevation="@dimen/dp_8"
                app:layout_collapseMode="pin">

                <ImageView
                    android:id="@+id/imageBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_baseline_arrow_back_24" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideVertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/textTypeDetailMovie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:gravity="center"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAddMyList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:backgroundTint="@color/color_limed_spruce"
                android:drawableStart="@drawable/ic_baseline_add_24"
                android:text="@string/text_my_list"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toStartOf="@+id/guideVertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTypeDetailMovie" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonPlayTrailer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:backgroundTint="@android:color/white"
                android:drawableStart="@drawable/ic_baseline_play_arrow_24"
                android:text="@string/text_play_trailer"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideVertical"
                app:layout_constraintTop_toBottomOf="@+id/textTypeDetailMovie" />

            <TextView
                android:id="@+id/textDesDetailMovie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonAddMyList" />

            <TextView
                android:id="@+id/textCompanies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="@+id/textDesDetailMovie"
                app:layout_constraintStart_toStartOf="@+id/textDesDetailMovie"
                app:layout_constraintTop_toBottomOf="@+id/textDesDetailMovie" />

            <TextView
                android:id="@+id/textCast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="@+id/textDesDetailMovie"
                app:layout_constraintStart_toStartOf="@+id/textDesDetailMovie"
                app:layout_constraintTop_toBottomOf="@+id/textCompanies" />

            <View
                android:id="@+id/viewDetail"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_32"
                android:background="@color/color_limed_spruce"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textCast" />

            <View
                android:id="@+id/viewLikeThis"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_8"
                android:background="@android:color/holo_red_dark"
                app:layout_constraintEnd_toEndOf="@+id/textMoreLikeThis"
                app:layout_constraintStart_toStartOf="@+id/textMoreLikeThis"
                app:layout_constraintTop_toBottomOf="@+id/viewDetail" />

            <TextView
                android:id="@+id/textMoreLikeThis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/text_more_like_this"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/buttonAddMyList"
                app:layout_constraintTop_toBottomOf="@+id/viewLikeThis" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerMoreMovie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textMoreLikeThis"
                app:spanCount="3"
                tools:listitem="@layout/item_recyclerview_image_movie" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
